# gstreamer-example

./: .gitignore  LICENSE  README.md  postscript.md
ai_integration/: video-pipeline.dot
ai_integration/deepstream/: CMakeLists.txt  pipeline.json  sp_mp4.json  sp_rtsp.json  sp_uc.json
ai_integration/deepstream/doc/: video-pipeline.dot
ai_integration/deepstream/inc/: Common.h  DoubleBufferCache.h  Logger.h  VideoPipeline.h
ai_integration/deepstream/src/: VideoPipeline.cpp  main.cpp
application_develop/: README.md
application_develop/GstBufferPool/: README.md
application_develop/GstPadProbe/: CMakeLists.txt  README.md
application_develop/GstPadProbe/doc/: gstpadprobe.md
application_develop/GstPadProbe/inc/: VideoPipeline.h
application_develop/GstPadProbe/src/: VideoPipeline.cpp  main.cpp
application_develop/app/: CMakeLists.txt  README.md
application_develop/app/doc/: app.md  appsink.md  appsrc.md
application_develop/app/inc/: Common.h  DoubleBufferCache.h  appsink.h  appsrc.h
application_develop/app/src/: appsink.cpp  appsrc.cpp  main.cpp
application_develop/build_pipeline/: CMakeLists.txt  Common.h  README.md  VideoPipeline.cpp  VideoPipeline.h  gst_element_factory_make.cpp  gst_parse_launch.cpp
application_develop/build_pipeline/doc/: build_pipeline.md
application_develop/build_pipeline/inc/: Common.h  VideoPipeline.h
application_develop/build_pipeline/src/: VideoPipeline.cpp  gst_element_factory_make.cpp  gst_parse_launch.cpp
application_develop/custom_user_plugin/: CMakeLists.txt  README.md  config.h  gstoverlay.c  gstoverlay.h
application_develop/gst-template/: README.md  meson.build
application_develop/gst-template/gst-app/: meson.build
application_develop/gst-template/gst-app/src/: main.c
application_develop/gst-template/gst-plugin/: meson.build
application_develop/gst-template/gst-plugin/src/: gstaudiofilter.c  gstplugin.c  gstplugin.h  gsttransform.c  gsttransform.h
application_develop/gst-template/gst-plugin/tools/: make_element
application_develop/uridecodebin/: CMakeLists.txt  README.md  uridecodebin.md
application_develop/uridecodebin/inc/: Common.h  DoubleBufferCache.h  VideoPipeline.h
application_develop/uridecodebin/src/: VideoPipeline.cpp  main.cpp
basic_theory/: README.md
basic_theory/app_dev_manual/: autoplugging.md  fundamental.md  interfaces.md  metadata.md  threads.md
basic_theory/basic_tutorial/: dynamic_pipelines.md  gstreamer_concepts.md  hello_world.md  media_format.md  multithread.md  short_cutting_pipeline.md
basic_theory/playback/: hardware_decode.md  playbin.md  playbin_sink.md  progressive_stream.md  shortcut_pipeline.md  subtitle.md
deepstream/: DeepStreamSample.md  nvdsosd.md
qti_gst_plugins/qtioverlay/: README.md
qti_gst_plugins/qtioverlay/qtimlmeta/: CMakeLists.txt  ml_meta.c  ml_meta.h
qti_gst_plugins/qtioverlay/qtioverlay/: CMakeLists.txt  config.h.in  gstoverlay.cc  gstoverlay.h
qti_gst_plugins/qtioverlay/qtiqmmf_overlay/: CMakeLists.txt  overlay_blit_kernel.cl  qmmf_overlay.cc  qmmf_overlay_item.h
useful_tricks/: rtspsrc_1.md  uridecodebin_1.md
